[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = [
    "bevy_dev_tools",
    "wav",
    "tiff",
]}
bevy_ecs_tiled = { version = "0.6.0", features = [
    "physics",
    "rapier",
]}
bevy_ecs_tilemap = "0.15.0"
bevy_framepace = "0.18.1"
bevy_rapier2d = "0.29.0"
rand = "0.9.0"


